# cursor_cli_manager_pre_release

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: linux_builder_image.yml  release.yml  tests.yml
cursor_cli_manager/: __init__.py  agent_discovery.py  agent_patching.py  agent_store.py  cli.py  github_release.py  opening.py  tui.py  update.py
docker/linux-builder/: Dockerfile  Dockerfile.nc6
scripts/: build_linux_binary_docker.sh  install_ccm.sh
tests/: test_agent_discovery.py  test_agent_discovery_recent_folders.py  test_agent_patching.py  test_agent_paths.py  test_agent_store.py  test_agent_title_cache_io.py  test_cli_tui_quit.py  test_github_release.py  test_install_script.py  test_models.py  test_opening.py  test_paths.py  test_release_assets_consistency.py  test_tui_background_loader.py  test_tui_input_handling.py  test_tui_misc.py  test_tui_preview_overlay.py  test_tui_rendering.py  test_tui_status_bar.py  test_update.py  test_update_default_runner.py  test_update_github_release.py  test_vscdb.py  test_workspace_map.py
